samples/_failures_safe/1761316643_464360_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24173a71.c: In function ‘main’:
./samples/SAFE/__tmp_24173a71.c:162:5: error: expected declaration or statement at end of input
  162 |     return 0;
      |     ^~~~~~
